# whisperkey

./: .gitignore  Cargo.toml  README-vosk.md  README.md  plan-notes.md  plan.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: README.md  build.yml
core/: Cargo.toml  lib.rs
core/src/: audio_capture.rs  audio_processor.rs  command.rs  config.rs  coordinator.rs  keyboard_output.rs  lib.rs  transcriber.rs  types.rs
ctranslate2-sys/: Cargo.toml  build.rs  ctranslate2.cmake  lib.rs  whisper_bridge.h
scripts/: build-ctranslate2.sh  download-whisper-model.sh  download_vosk_model.sh
src/: main.rs  settings.rs  tray.rs
transcriber/: Cargo.toml
transcriber/src/: main.rs
