[workspace]
members = [".", "core"]

[package]
name = "whisperkey"
version = "0.1.0"
edition = "2021"

[dependencies]
tray-icon = { workspace = true }
#relm4 = { workspace = true }
#gtk = { version = "0.18" }             # or "gtk3" if needed
clap = { workspace = true }
cpal = { workspace = true }
enigo = { workspace = true }
whisper-rs = { workspace = true }
whisperkey_core = { workspace = true }
hound = "3.5"
nnnoiseless = "0.5.0"
ctranslate2-sys = { workspace = true }


[workspace.dependencies]
clap = "4.5.29"
cpal = "0.15.3"
enigo = "0.3.0"
#relm4 = "0.9.1"
serde = "1.0.217"
serde_json = "1.0.138"
tray-icon = "0.19.2"
whisper-rs = "0.13.2"

whisperkey_core = { path = "./core" }
ctranslate2-sys = { path = "./ctranslate2-sys" }
