[package]
name = "whisperkey_core"
version = "0.1.0"
edition = "2021"


[dependencies]
whisper-rs = { workspace = true }
cpal = { workspace = true }
enigo = { workspace = true }
clap = { workspace = true }
ractor = "0.13"
tracing = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
